# iterative_closest_point_2d

./: .gitignore
cpp/: CMakeLists.txt  modern.cpp
cpp/include/: .icp.h.swp  cv_utils.h  icp.h  plot.h
cpp/src/: .icp.cpp.swp  cv_utils.cpp  icp.cpp  main.cpp  plot.cpp
src/: Icp2d.py
